--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,92 +2,90 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact</title>
+    <title>Contacts</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
 
 </head>
-<body>
-<div class="container">
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#"></a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li ><a href="index.html">Main</a></li>
-                    <li class="active"><a href="#">Contacts<span class="sr-only">(current)</span></a></li>
-                </ul>
+    <body>
+        <div class="container">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#"></a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li ><a href="index.html">Main</a></li>
+                            <li class="active"><a href="#">Contacts<span class="sr-only">(current)</span></a></li>
+                            <li ><a href="student_list.html">Students</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="jumbotron ">
+                <h2 class="opct-text">Our Contacts</h2>
+
+                <p class="skipe">Skype: Innad_sdg</p>
+                <p class="phone">Email: Marina@gmail.com </p>
+                <p class="phone">Phone: 12345689 </p>
+                <p>Address: Thomas Nolan Kaszas II 5322 Otter LaneMiddleberge FL 32068 </p>
+
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+                <div class="row ">
+                    <div class="col-sm-6 col-md-4 ">
+                        <div class="thumbnail  opct_avatar ">
+                            <img src="../static/images/1.png" alt="..."  class="avatar opct-img" >
+                            <div class="padd">
+                                <h3 class="opct-text">Founder</h3>
+                                <p class="name"> Name: Natasha</p>
+                                <p>Skype: Natasha_sdg </p>
+                                <p>Email: Natasha@gmail.com </p>
+                                <p>Phone: 12345689 </p>
+                                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail opct_avatar ">
+                            <img src="../static/images/2.png" alt="..." class="avatar opct-img">
+                            <div class="padd">
+                                <h3 class="opct-text">Manager</h3>
+                                <p class="name">Name: Marina</p>
+                                <p>Skype: Marina_sdg </p>
+                                <p>Email: Marina@gmail.com </p>
+                                <p>Phone: 12345689 </p>
+                                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                            </div>
+
+
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="thumbnail opct_avatar ">
+                            <img src="../static/images/3.png" alt="..." class="avatar opct-img">
+                            <div class="padd">
+                                <h3 class="opct-text">Director</h3>
+                                <p class="name">Name: Inna</p>
+                                <p>Skype: Innad_sdg </p>
+                                <p>Email: Innad@gmail.com </p>
+                                <p>Phone: 12345689 </p>
+                                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
-
-    <div class="jumbotron">
-        <h1>Our Contacts</h1>
-
-        <p class="skipe">Skype: Innad_sdg</p>
-        <p class="phone">Email: Marina@gmail.com </p>
-        <p class="phone">Phone: 12345689 </p>
-        <p>Address: Thomas Nolan Kaszas II 5322 Otter LaneMiddleberge FL 32068 </p>
-
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-        <div class="row">
-            <div class="col-sm-6 col-md-4 ">
-                <div class="thumbnail antiopas ">
-                    <img src="../static/images/1.png" alt="..."  class="avatar" >
-                    <div class="caption antiopas padd">
-                        <h3 class="antiopas">Founder</h3>
-                        <p class="name"> Name: Natasha</p>
-                        <p>Skype: Natasha_sdg </p>
-                        <p>Email: Natasha@gmail.com </p>
-                        <p>Phone: 12345689 </p>
-                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <div class="thumbnail antiopas">
-                    <img src="../static/images/2.png" alt="..." class="avatar">
-                    <div class="caption antiopas padd">
-                        <h3 class="antiopas">Manager</h3>
-                        <p class="name">Name: Marina</p>
-                        <p>Skype: Marina_sdg </p>
-                        <p>Email: Marina@gmail.com </p>
-                        <p>Phone: 12345689 </p>
-                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <div class="thumbnail antiopas">
-                    <img src="../static/images/3.png" alt="..." class="avatar">
-                    <div class="caption antiopas padd">
-                        <h3 class="antiopas">Director</h3>
-                        <p class="name">Name: Inna</p>
-                        <p>Skype: Innad_sdg </p>
-                        <p>Email: Innad@gmail.com </p>
-                        <p>Phone: 12345689 </p>
-                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-</div>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="../static/js/bootstrap.js"></script>
-
-</body>
-
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="../static/js/bootstrap.js"></script>
+    </body>
 </html>
