--- a/templates/index.html
+++ b/templates/index.html
@@ -20,30 +20,33 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Main<span class="sr-only">(current)</span></a></li>
             <li><a href="contact.html">Contacts</a></li>
+            <li ><a href="student_list.html">Students</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="jumbotron">
-        <h1>Hello, PyBursa!</h1>
+    <div class="jumbotron  ">
+        <h2 class="title">Hello, PyBursa!</h2>
         <h3>Description</h3>
 
-        <p>требования к контенту html-файлов должны быть соблюдены.
-            При клике на вкладку Main, видим описание, о чем курс (обязателен заголовок Description),
-            его программа (обязателен заголовок Program); указанные заголовки должны использоваться
-            только как описание курса; текст под заголовками, другие заголовки и элементы - полет
-            Вашей фантазии. Заказчик пожелал, чтобы в наименовании курса обязательно присутствовала
-            строка "Bursa"</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vestibulum augue sit
+            amet justo efficitur bibendum. Curabitur lacus odio, luctus quis mauris ut,
+            finibus cursus nulla. Duis iaculis tortor ac nisl porttitor placerat.
+            Sed vel nisl convallis, rutrum felis eu, mollis ex. Curabitur pellentesque magna et
+            faucibus imperdiet. Quisque sed felis sem. Vestibulum elementum dui enim, non
+            maximus lacus condimentum sit amet. Cras pellentesque imperdiet sapien efficitur
+            varius."</p>
+
         <h3>Program</h3>
 
-        <p>требования к контенту html-файлов должны быть соблюдены.
-            При клике на вкладку Main, видим описание, о чем курс (обязателен заголовок Description),
-            его программа (обязателен заголовок Program); указанные заголовки должны использоваться
-            только как описание курса; текст под заголовками, другие заголовки и элементы - полет
-            Вашей фантазии. Заказчик пожелал, чтобы в наименовании курса обязательно присутствовала
-            строка "Bursa"</p>
+        <p>Vivamus ut facilisis leo. Cras gravida pharetra porttitor. Phasellus mollis finibus
+            tellus, non eleifend erat porttitor sed. Sed eget nibh eget neque sodales tincidunt
+            sit amet nec justo. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+            Integer eu neque mi. Vivamus rhoncus, nisl eget porta luctus, ante magna feugiat
+            enim, sit amet accumsan lacus enim sed justo. Ut cursus, nulla ac blandit laoreet,
+            enim enim pulvinar nisi, a imperdiet ante libero et erat. Vestibulum eget vehicula
+            ligula. Morbi condimentum et risus non dignissim.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 
         <div class="row">
@@ -51,10 +54,7 @@
                 <!--<div class="thumbnail">-->
                     <div class="caption">
                         <h3>НАЧИНАЮЩИЙ</h3>
-                        <p>начать IT-карьеру основы веб
-                            разработки на базе Python
-                            окупить обучение первой ЗП
-                            получить работу при выпуске
+                        <p>Phasellus justo mi, feugiat a posuere ac, pellentesque lacinia libero. Donec arcu nulla, feugiat in rutrum in, tristique non augue.Pellentesque id ipsum lorem. Phasellus fermentum euismod elit ut tempus.
                         </p>
                         <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
                     </div>
@@ -64,10 +64,7 @@
                 <!--<div class="thumbnail">-->
                     <div class="caption">
                         <h3>HR, PM</h3>
-                        <p>начать IT-карьеру основы веб
-                            разработки на базе Python
-                            окупить обучение первой ЗП
-                            получить работу
+                        <p>Maecenas pulvinar varius interdum. Fusce tempor quis quam sit amet ullamcorper. Pellentesque metus dolor, vestibulum vitae pulvinar non, imperdiet quis elit. Phasellus tempus interdum tempor.
                         </p>
                         <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
                     </div>
@@ -77,11 +74,7 @@
                 <!--<div class="thumbnail">-->
                     <div class="caption">
                         <h3>ОПЫТНЫЙ</h3>
-                        <p>начать IT-карьеру основы веб
-                            разработки на базе Python
-                            окупить обучение первой ЗП
-                            получить работу при выпуске
-                            при выпуске
+                        <p>In imperdiet purus convallis ex posuere tempus. Maecenas ut egestas neque. Proin non tincidunt quam, a placerat neque.Pellentesque id ipsum lorem. Phasellus fermentum euismod elit ut tempus.
                         </p>
                         <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
                     </div>
