--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img class="logo" src="../static/images/Other-python.ico"></a>
+          <a class="navbar-brand" href="index.html"><img class="logo" lat="PyBursa" src="../static/images/Other-python.ico"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
