--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,8 @@
 
 <div class="container">
 <div class="panel-color jumbotron">
-<p> <div class="center font bold">PyBursa</div>
-  <h2>Description</h2></p>
+<p> PyBursa</p>
+  <h2>Description</h2>
   <p class="justify">Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. </p>
   <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>-->
 </div>
