--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contacts</title>
+    <title>Students detail</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -67,8 +67,24 @@
                         </td>
                         <td>
                             <table >
-                                <tr><td>99%</td></tr>
-                                <tr><td>99%</td></tr>
+                                <tr>
+                                    <td>
+                                        <div class="progress" style="width: 100px;">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                                60%
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="progress" style="width: 100px;">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                                80%
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
                             </table>
                         </td>
                     </tr>
@@ -83,8 +99,24 @@
                         </td>
                         <td>
                             <table >
-                                <tr><td>99%</td></tr>
-                                <tr><td>99%</td></tr>
+                                <tr>
+                                    <td>
+                                        <div class="progress" style="width: 100px;">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                                60%
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="progress" style="width: 100px;">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                                80%
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
                             </table>
                         </td>
                     </tr>
