--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contacts</title>
+    <title>Students</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -40,6 +40,7 @@
                                     <th>Name</th>
                                     <th>Address</th>
                                     <th>Skype</th>
+                                    <th>Messages</th>
                                 </tr>
                                 <tr>
                                     <td><a href="student_detail.html">1</a></td>
@@ -47,6 +48,7 @@
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
                                     <td>Pupkin.Skype</td>
+                                    <td><a href="#">Messages <span class="badge">3</span></a></td>
                                 </tr>
                                 <tr>
                                     <td><a href="student_detail.html">2</a></td>
@@ -54,6 +56,7 @@
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
                                     <td>Pupkin.Skype</td>
+                                    <td><a href="#">Messages <span class="badge">3</span></a></td>
                                 </tr>
                                 <tr>
                                     <td><a href="student_detail.html">3</a></td>
@@ -61,6 +64,7 @@
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
                                     <td>Pupkin.Skype</td>
+                                    <td><a href="#">Messages <span class="badge">3</span></a></td>
                                 </tr>
                                 <tr>
                                     <td><a href="student_detail.html">4</a></td>
@@ -68,6 +72,7 @@
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
                                     <td>Pupkin.Skype</td>
+                                    <td><a href="#">Messages <span class="badge">3</span></a></td>
                                 </tr>
                                 <tr>
                                     <td><a href="student_detail.html">5</a></td>
@@ -75,8 +80,19 @@
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
                                     <td>Pupkin.Skype</td>
+                                    <td><a href="#">Messages <span class="badge">3</span></a></td>
                                 </tr>
                             </table>
+
+                <nav>
+                    <ul class="pagination">
+                        <li class="dark"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                        <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+                        <li class="dark"><a href="#">2 <span class="sr-only">(current)</span></a></li>
+                        <li class="dark"><a href="#">3 <span class="sr-only">(current)</span></a></li>
+                        <li class="dark"><a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span>                        </a></li>
+                    </ul>
+                </nav>
             </div>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
