--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,7 +26,7 @@
                 </div>
             </nav>
             <div class="jumbotron ">
-                <h2 class="opct-text">Our Contacts</h2>
+                <h2 class="opct-text">Contacts</h2>
 
                 <p class="skipe">Skype: Innad_sdg</p>
                 <p class="phone">Email: Marina@gmail.com </p>
