--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
     </nav>
     <div class="jumbotron">
       <div class="container">
-        <h1>Python Bursa</h1>
-        <h3>Discription</h3>
+        <h1>Discription</h1>
+        <h3>PyBursa</h3>
         <p>В этом курсе мы сместили акцент в сторону практики.
            Будет умеренное количество теории - максимум практики.
            Примерное соотношение теории и практики: 30% на 70%
@@ -72,7 +72,6 @@
         </ul>
       </div>
     </div>
-    <a class = "linki" href = "contact.html">Click to watch Contacts</a>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
