--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,8 +22,8 @@
         <div class="navbar-header">
           <div class="btn-group">
             <ul class="nav nav-pills">
-              <li role="presentation"class="active"><a href="#">Contacts</a></li> 
               <li role="presentation" ><a href="index.html">Main</a></li>
+              <li role="presentation"class="active"><a href="#">Contacts</a></li> 
             </ul>
            </div>
         </div>
@@ -33,7 +33,7 @@
       </nav>
       <div class="jumbotron">
         <div  class="container">
-          <h1 class="head">Our Teachers</h1>
+          <h1 class="head">Contacts</h1>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
