--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,11 +19,15 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li ><a href="index.html">Main</a></li>
-                            <li class="active"><a href="#">Contacts<span class="sr-only">(current)</span></a></li>
+                            <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
                             <li ><a href="student_list.html">Students</a></li>
                         </ul>
+                        <p class="navbar-text navbar-right top_mass">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
+                        <a href="#"  class="top_mass">Inbox <span class="badge">42</span></a>
+
                     </div>
                 </div>
+
             </nav>
             <div class="jumbotron ">
                 <h2 class="opct-text">Contacts</h2>
@@ -81,7 +85,9 @@
                         </div>
                     </div>
                 </div>
+
             </div>
+
         </div>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
