--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,13 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Main<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li ><a href="student_list.html">Students</a></li>
           </ul>
+            <p class="navbar-text navbar-right top_mass">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
+            <a href="#"  class="top_mass">Inbox <span class="badge">42</span></a>
+
         </div>
       </div>
     </nav>
