--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -22,6 +22,8 @@
                             <li><a href="contact.html">Contacts</a></li>
                             <li class="active"><a href="#">Students<span class="sr-only">(current)</span></a></li>
                         </ul>
+                        <p class="navbar-text navbar-right top_mass">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
+                        <a href="#" class="top_mass" style="">Inbox <span class="badge">42</span></a>
                     </div>
                 </div>
             </nav>
