--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -20,8 +20,10 @@
                         <ul class="nav navbar-nav">
                             <li ><a href="index.html">Main</a></li>
                             <li><a href="contact.html">Contacts</a></li>
-                            <li class="active"><a href="#">Students<span class="sr-only">(current)</span></a></li>
+                            <li class="active"><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
                         </ul>
+                        <p class="navbar-text navbar-right top_mass">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
+                        <a href="#"  class="top_mass" >Inbox <span class="badge">42</span></a>
                     </div>
                 </div>
             </nav>
