--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li ><a href="student_list.html">Students</a></li>
           </ul>
